# PANDORA

./: .gitignore  .gitmodules  02_05_2018.txt  CMakeLists.txt  README  README.md  README_cmake.md  SConstruct  brainstorming.txt  passos_compilar.txt
cassandra/: AgentAnalysis.cxx  AgentAnalysis.hxx  AgentConfiguration.cxx  AgentConfiguration.hxx  AgentConfigurator.cxx  AgentConfigurator.hxx  AgentTraitSelection.cxx  AgentTraitSelection.hxx  AgentTypeSelection.cxx  AgentTypeSelection.hxx  AnalysisControlThread.cxx  AnalysisControlThread.hxx  CMakeLists.txt  ColorInterval.hxx  ColorSelector.hxx  DataPlot.cxx  DataPlot.hxx  DefaultColorSelector.cxx  DefaultColorSelector.hxx  Display2D.cxx  Display2D.hxx  Exception.hxx  GenericStatistics.cxx  GenericStatistics.hxx  HeatMapDialog.cxx  HeatMapDialog.hxx  Laboratory.cxx  Laboratory.hxx  LoadSimulationThread.cxx  LoadSimulationThread.hxx  Loader3DS.cxx  Loader3DS.hxx  LoadingProgressBar.cxx  LoadingProgressBar.hxx  MainWindow.cxx  MainWindow.hxx  Makefile  Material.cxx  Material.hxx  MeanDataPlot.cxx  (+39 more)
examples/: CMakeLists.txt  README
examples/Flocking/: Bird.cxx  Bird.hxx  CMakeLists.txt  Flocking  MoveAction.cxx  MoveAction.hxx  RandomWorld.cxx  RandomWorld.hxx  RandomWorldConfig.cxx  RandomWorldConfig.hxx  SConstruct  command.R  config.xml  main.cxx
examples/IoTwins/: Counter.cxx  Counter.hxx  DoNothingAction.cxx  DoNothingAction.hxx  EspaiBarca.cxx  EspaiBarca.hxx  EspaiConfig.cxx  EspaiConfig.hxx  IoTwins  LeaveAction.cxx  LeaveAction.hxx  MoveAction.cxx  MoveAction.hxx  Person.cxx  Person.hxx  SConstruct  WanderAction.cxx  WanderAction.hxx  config-backup.xml  config.xml  main.cxx  run_1-1-001-001-1-1-001-001.txt
examples/anasazi/: CMakeLists.txt  virtualAnasazi.py
examples/contact_tracing/: Athlete.cxx  Athlete.hxx  Cashier.cxx  Cashier.hxx  Client.cxx  Client.hxx  Customer.cxx  Customer.hxx  EatAction.cxx  EatAction.hxx  Gym.cxx  Gym.hxx  GymConfig.cxx  GymConfig.hxx  HumanBeeing.cxx  HumanBeeing.hxx  InfectAction.cxx  InfectAction.hxx  InfectActionOutside.cxx  InfectActionOutside.hxx  LeaveAction.cxx  LeaveAction.hxx  MoveAction.cxx  MoveAction.hxx  NextPositionAction.cxx  NextPositionAction.hxx  Passanger.cxx  Passanger.hxx  Phone.cxx  Phone.hxx  README.md  RandomMoveAction.cxx  RandomMoveAction.hxx  Restaurant.cxx  Restaurant.hxx  RestaurantConfig.cxx  RestaurantConfig.hxx  SConstruct  SeatAction.cxx  SeatAction.hxx  (+27 more)
examples/cultureDissemination/: CMakeLists.txt
examples/epidemy/: CMakeLists.txt  Earth.cxx  Human.cxx  SConstruct
examples/flocking/: Bird.hxx  MoveAction.cxx  RandomWorld.cxx  RandomWorld.hxx  RandomWorldConfig.cxx  RandomWorldConfig.hxx  SConstruct  command.R  config.xml  main.cxx
examples/frontier/: CMakeLists.txt  frontier.py
examples/gujarat/: CMakeLists.txt  GujaratAgent.cxx  GujaratWorld.cxx  HunterGathererMDPController.cxx  HunterGathererMDPState.cxx  MoveHomeAction.cxx  SConstruct  SettlementAreas.hxx
examples/gujaratCellphones/: CMakeLists.txt  Herder.cxx  HerderState.cxx  SConstruct  Village.cxx
examples/gunpowderSim/: CMakeLists.txt  README
examples/musicalChairs/: CMakeLists.txt  README  oasis.py
examples/neolithic/: CMakeLists.txt  README
examples/panic/: CMakeLists.txt  PanicAgent.cxx  Scenario.cxx
examples/python/: CMakeLists.txt  agents.csv  resources.csv
examples/quantumForaging/: CMakeLists.txt  ForagerState.cxx
examples/randomWalkers/: CMakeLists.txt
examples/research/: Academia.cxx  CMakeLists.txt
examples/segregation/: CMakeLists.txt  Neighbor.cxx  config.xml
examples/stupidModel/: Bug.cxx  Bug.hxx  ConcreteAgent.cxx  ConcreteAgent.hxx  DieAction.cxx  DieAction.hxx  EatAction.cxx  EatAction.hxx  GenerateMPICodeAndCompileModel.py  GrowAction.cxx  GrowAction.hxx  HuntAction.cxx  HuntAction.hxx  KillAction.cxx  KillAction.hxx  MoveAction.cxx  MoveAction.hxx  Predator.cxx  Predator.hxx  RandomWorld.cxx  RandomWorld.hxx  RandomWorldConfig.cxx  RandomWorldConfig.hxx  SConstruct  command.R  compilingParameters.txt  config.xml  main.cxx  out.txt  stupidModel
examples/sugarRush/: MoveAction.cxx  MoveAction.hxx  RandomAgent.cxx  RandomAgent.hxx  RandomWorld.cxx  RandomWorld.hxx  RandomWorldConfig.cxx  RandomWorldConfig.hxx  ReplacementAction.hxx  SConstruct  config.xml  sugarRush
examples/sugarScape/: Makefile  MoveAction.cxx  MoveAction.hxx  RandomAgent.cxx  RandomAgent.hxx  RandomWorld.cxx  RandomWorld.hxx  RandomWorldConfig.cxx  RandomWorldConfig.hxx  ReplacementAction.cxx  SConstruct  config.xml  main.cxx  sugarScape
examples/sugarScape_escalable/: MoveAction.cxx  MoveAction.hxx  README  RandomAgent.cxx  RandomAgent.hxx  RandomWorld.cxx  RandomWorld.hxx  RandomWorldConfig.cxx  RandomWorldConfig.hxx  ReplacementAction.cxx  SConstruct  cmake_install.cmake  config.xml  main.cxx  out.txt  sugarScape_escalable
pyPandora/: CMakeLists.txt  pyBindings.cxx
src/: Action.cxx  Action.hxx  Agent.cxx  Agent.hxx  AgentRecord.cxx  AgentRecord.hxx  CMakeLists.txt  CheckpointingFactory.cxx  CheckpointingFactory.hxx  Config.cxx  Config.hxx  DifferentSpaces.cxx  DifferentSpaces.hxx  DynamicRaster.cxx  DynamicRaster.hxx  Exception.hxx  GeneralState.cxx  GeneralState.hxx  Geometry.hxx  HashTable.hxx  IncrementalRaster.cxx  IncrementalRaster.hxx  Interval.hxx  Jenkins12Bit.hxx  LoadBalanceTree.cxx  LoadBalanceTree.hxx  Logger.hxx  LoggerBase.cxx  LoggerBase.hxx  MPIAutoAdjustment.cxx  MPIAutoAdjustment.hxx  MPILoadBalanceTree.cxx  MPILoadBalanceTree.hxx  MPIMultiNode.cxx  MPIMultiNode.hxx  MPIMultiNodeLogs.cxx  MPIMultiNodeLogs.hxx  MpiFactory.cxx  MpiFactory.hxx  OpenMPIMultiNode.cxx  (+39 more)
src/analysis/: AgentHDFtoSHP.cxx  AgentHDFtoSHP.hxx  AgentHistogram.hxx  AgentMean.hxx  AgentNum.hxx  AgentStdDev.hxx  AgentSum.hxx  Analysis.cxx  Analysis.hxx  GlobalAgentStats.cxx  GlobalAgentStats.hxx  GlobalRasterStats.cxx  GlobalRasterStats.hxx  IndividualStats.cxx  IndividualStats.hxx  Output.cxx  Output.hxx  RasterMean.hxx  RasterSum.hxx
src/pyPandora/: pyBindings.cxx
tinyxml/: CMakeLists.txt  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
utils/: CMakeLists.txt  MpiStubCode.cxx
(+223 files in other folders)
